cmake_minimum_required(VERSION 3.2)
project(CocoaExamples)

add_subdirectory("src/HelloWorld")

add_subdirectory("src/Application")
add_subdirectory("src/ApplicationWithMessageLoop")

add_subdirectory("src/Button")
add_subdirectory("src/CheckBox")
add_subdirectory("src/Label")
add_subdirectory("src/MainMenu")
add_subdirectory("src/ProgressBar")
add_subdirectory("src/RadioButton")
add_subdirectory("src/TextBox")
add_subdirectory("src/TrackBar")

add_subdirectory("src/ColoredTabPages")
add_subdirectory("src/Form")
add_subdirectory("src/Panel")
add_subdirectory("src/GroupBox")
add_subdirectory("src/TabControl")

add_subdirectory("src/MessageBox")

add_subdirectory("src/Drawing")
